--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# other from this project
+clean_folder.egg-info/
+build/
+
+# virtual environments (for example .venv)
+.*/
+
 # Logs
 logs
 *.log
